--- a/shopweb/web/login.html
+++ b/shopweb/web/login.html
@@ -28,28 +28,18 @@
             <div class="container">
                 <div class="login">
                     <div class="box">
-                        <form action="/auth" id="login_form" method="POST">
-                            <div class="row">
-                                <div class="col-md-2">
+                        <div class="row">
+                            <form action="/auth" id="login_form" method="POST">
+                                <div>
                                     <label for="username">E-mail </label>
-                                </div>
-                                <div class="col-md-2">
                                     <input id="username" type="text"/>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-2">
+                                <div>
                                     <label for="password">Parola </label>
-                                </div>
-                                <div class="col-md-2">
                                     <input id="password" type="password"/>
                                 </div>
-                            </div>
-                        </form>
-                        <div class="row">
-                            <div class="col-md-2">
-                                <div id="login-btn" class="btn">Login</div>
-                            </div>
+                            </form>
+                            <div id="login-btn" class="btn">Login</div>
                         </div>
                     </div>
                 </div>
