--- a/shopweb/web/saveproduct.html
+++ b/shopweb/web/saveproduct.html
@@ -29,7 +29,9 @@
 
         <div id="fh5co-media-section">
             <div class="container">
-
+                <div class="cart_errors">
+                    <ul></ul>
+                </div>
                 <form action="<!--inline:path-->" id="upload_form" method="POST">
 
                     <div class="upload_form_fields">
