--- a/shopweb/web/cart.html
+++ b/shopweb/web/cart.html
@@ -57,7 +57,7 @@
                 </div>
                 <!-- end -->
                 <div class="row animate-box">
-                    <div class="cart_errors">
+                    <div class="form_errors">
                         <ul></ul>
                     </div>
                     <form id="order_form">
