--- a/shopweb/web/savecategory.html
+++ b/shopweb/web/savecategory.html
@@ -29,6 +29,9 @@
 
         <div id="fh5co-media-section">
             <div class="container">
+                <div class="form_errors">
+                    <ul></ul>
+                </div>
 
                 <form action="<!--inline:path-->" id="upload_form" method="POST">
 
