--- a/shopweb/web/saveproduct.html
+++ b/shopweb/web/saveproduct.html
@@ -29,7 +29,7 @@
 
         <div id="fh5co-media-section">
             <div class="container">
-                <div class="cart_errors">
+                <div class="form_errors">
                     <ul></ul>
                 </div>
                 <form action="<!--inline:path-->" id="upload_form" method="POST">
