--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -40,6 +40,20 @@
 
         <div id="fh5co-media-section">
             <div class="container">
+                <!-- snip:permissions(write) -->
+                <div class="row">
+                    <div class="col-md-3">
+                        <a href="#">
+                            <div class="btn">Șterge categorie</div>
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <div class="btn">Editează categorie</div>
+                        </a>
+                    </div>
+                </div>
+                <!-- end -->
                 <div class="row animate-box">
 
 
