--- a/shopweb/web/savecategory.html
+++ b/shopweb/web/savecategory.html
@@ -33,7 +33,7 @@
                     <ul></ul>
                 </div>
 
-                <form action="<!--inline:path-->" id="upload_form" method="POST">
+                <form action="<!--inline:path-->" id="upload_form" method="<!--inline:method-->">
 
                     <div class="upload_form_fields">
 
